--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ h2 {
     right: 0;
     bottom: 0;
     width: 200px; /* Ancho de la imagen */
-    background-image: url('/Ordinador/placabase.jpg'); /* Ruta de la imagen para la placa base */
+    background-image: url('Ordinador/placabase.jpg'); /* Ruta de la imagen para la placa base */
     background-size: cover;
     background-position: center;
     border-bottom-right-radius: 10px;
@@ -114,7 +114,7 @@ h2 {
     right: 0;
     bottom: 0;
     width: 200px; /* Ancho de la imagen */
-    background-image: url('/Ordinador/procesador.png'); /* Ruta de la imagen para el procesador */
+    background-image: url('Ordinador/procesador.png'); /* Ruta de la imagen para el procesador */
     background-size: cover;
     background-position: center;
     border-bottom-right-radius: 10px;
@@ -128,7 +128,7 @@ h2 {
     right: 0;
     bottom: 0;
     width: 200px; /* Ancho de la imagen */
-    background-image: url('/Ordinador/ram.jpg'); /* Ruta de la imagen para el procesador */
+    background-image: url('Ordinador/ram.jpg'); /* Ruta de la imagen para el procesador */
     background-size: cover;
     background-position: center;
     border-bottom-right-radius: 10px;
@@ -142,7 +142,7 @@ h2 {
     right: 0;
     bottom: 0;
     width: 200px; /* Ancho de la imagen */
-    background-image: url('/Ordinador/ssd.png'); /* Ruta de la imagen para el procesador */
+    background-image: url('Ordinador/ssd.png'); /* Ruta de la imagen para el procesador */
     background-size: cover;
     background-position: center;
     border-bottom-right-radius: 10px;
@@ -156,7 +156,7 @@ h2 {
     right: 0;
     bottom: 0;
     width: 200px; /* Ancho de la imagen */
-    background-image: url('/Ordinador/carcasa.jpg'); /* Ruta de la imagen para el procesador */
+    background-image: url('Ordinador/carcasa.jpg'); /* Ruta de la imagen para el procesador */
     background-size: cover;
     background-position: center;
     border-bottom-right-radius: 10px;
@@ -170,7 +170,7 @@ h2 {
     right: 0;
     bottom: 0;
     width: 200px; /* Ancho de la imagen */
-    background-image: url('/Ordinador/bateria.jpg'); /* Ruta de la imagen para el procesador */
+    background-image: url('Ordinador/bateria.jpg'); /* Ruta de la imagen para el procesador */
     background-size: cover;
     background-position: center;
     border-bottom-right-radius: 10px;
@@ -184,7 +184,7 @@ h2 {
     right: 0;
     bottom: 0;
     width: 200px; /* Ancho de la imagen */
-    background-image: url('/Ordinador/pantalla.jpeg'); /* Ruta de la imagen para el procesador */
+    background-image: url('Ordinador/pantalla.jpeg'); /* Ruta de la imagen para el procesador */
     background-size: cover;
     background-position: center;
     border-bottom-right-radius: 10px;
