--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ h2 {
     padding: 10px;
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
+    text-align: left;
 }
 
 .scroll {
@@ -192,7 +193,21 @@ h2 {
 }
 
 .component:last-child{
-    margin-bottom: 200px;
+    margin: 200px 625px;
+    box-shadow: 0px -5px 5px 10px rgba(47, 240, 251, 0.5); /* Agregamos sombra */
+    text-align: center;
+}
+
+.component:last-child h2 {
+    margin-bottom: 15px;
+    margin-right: 1px;
+    text-align: center;
+    background-color: #292739;
+    color: #eaeef0;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: left;
+    
 }
 
 /* Estilos para las listas de características */
